# RTXNTC-Library-UE

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ThirdPartyLicenses.txt
include/libntc/: ntc.h
include/libntc/shaders/: ColorSpaces.ush  DecompressConstants.ush  Inference.hlsli  InferenceConstants.h  InferenceCoopVec.hlsli  InferenceCoopVec.ush
src/: CMakeLists.txt  Context.cpp  Context.h  CoopVecWeightConverter.cpp  CoopVecWeightConverter.h  FeatureGridMath.cpp  FeatureGridMath.h  GraphicsResources.cpp  GraphicsResources.h  ImageProcessing.cu  ImageProcessing.h  JsonFileFormat.cpp  JsonFileFormat.h  JsonSerialization.h  MlpDesc.h  PublicFunctions.cpp  Quantizer.cu  Quantizer.h  RegressionCommon.h  RegressionKernels.h  Resources.rc  Shaders.cpp  TextureSet.cpp  TextureSet.h  TextureSetMetadata.cpp  TextureSetMetadata.h  VersionInfoTemplate.h
src/shaders/: CompressBC7.hlsl  DecompressCoopVecFP8.slang  DecompressCoopVecInt8.slang  DecompressINT8.hlsl  Shaders.cfg
tools/: ConfigureCompilers.cmake
